# accneat

./: .gitignore  CMakeLists.txt
src/innovgenome/: innovation.cpp
